fix coockie modal on tablet. add tooltip to hamburger menu.

--- a/src/assets/style/sass/Cookie.sass
+++ b/src/assets/style/sass/Cookie.sass
@@ -60,24 +60,31 @@
     .cookie
         .cookie__modal
             width: 80%
-            height: 60%
+            height: 40%
             .modal__text
                 p
             .modal__btn
-                top: 2rem
-                left: 0
+                top: 1rem
+                left: 4rem
                 &:hover
 
-    @media (max-width: $layout_Phone) and (orientation: landscape)
+@media (max-width: $layout_Phone) and (orientation: landscape)
 
-    @media (min-width: $layout_Phone) and (max-width: $layout_Tablet) and (orientation: portrait)
-    @media (min-width: $layout_Phone) and (max-width: $layout_Tablet) and (orientation: landscape)
+@media (min-width: $layout_Phone) and (max-width: $layout_Tablet) and (orientation: portrait)
+    .cookie
+        .cookie__modal
+            width: 70%
+            .modal__text
+                p
+            .modal__btn
+                &:hover
+@media (min-width: $layout_Phone) and (max-width: $layout_Tablet) and (orientation: landscape)
 
-    @media (min-width: $layout_Tablet) and (max-width: $layout_Laptop) and (orientation: portrait)
-    @media (min-width: $layout_Tablet) and (max-width: $layout_Laptop) and (orientation: landscape)
+@media (min-width: $layout_Tablet) and (max-width: $layout_Laptop) and (orientation: portrait)
+@media (min-width: $layout_Tablet) and (max-width: $layout_Laptop) and (orientation: landscape)
 
-    @media (min-width: $layout_Laptop) and (max-width: $layout_Large) and (orientation: portrait)
-    @media (min-width: $layout_Laptop) and (max-width: $layout_Large) and (orientation: landscape)
+@media (min-width: $layout_Laptop) and (max-width: $layout_Large) and (orientation: portrait)
+@media (min-width: $layout_Laptop) and (max-width: $layout_Large) and (orientation: landscape)
 
-    @media (min-width: $layout_Large) and (orientation: portrait)
-    @media (min-width: $layout_Large) and (orientation: landscape)
+@media (min-width: $layout_Large) and (orientation: portrait)
+@media (min-width: $layout_Large) and (orientation: landscape)
