--- a/src/assets/style/sass/HeadFooter.sass
+++ b/src/assets/style/sass/HeadFooter.sass
@@ -70,7 +70,7 @@
                 .icon-mail-squared
                     margin-left: 35%
         .hfooter__right
-            margin: 0.5rem 1rem
+            margin: -1rem 1rem
 @media (min-width: $layout_Phone) and (max-width: $layout_Tablet) and (orientation: landscape)
     .head__footer
         .hfooter__left
